<resources>
    <string name="app_name">GymBuddy</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="add_workout">Add Workout</string>
    <string name="save">Save</string>
    <string-array name="weeks_array">
        <item>Weeks</item>
        <item>Last Week</item>
        <item>Last Month</item>
    </string-array>
</resources>

